tests/negative/class/class_super_argument_type.tx
// EXPECTED: COMPILE_ERROR
// Description: super() arguments must match the parent constructor signature.

class Base {
    constructor(id: int, label: string) {}
}

class Derived extends Base {
    constructor() {
        super("oops", 10);
    }
}

function main() {}
